# SwiftSurfing/SwiftSurfing/Swaggers/Models/APIItem.swift
@@ -1,0 +1,28 @@
+//
+// APIItem.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+
+public struct APIItem: Codable {
+
+    public var name: String?
+    public var type: String?
+    public var label: String?
+    public var state: String?
+
+    public init(name: String?, type: String?, label: String?, state: String?) {
+        self.name = name
+        self.type = type
+        self.label = label
+        self.state = state
+    }
+
+
+}
+
